// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup modal body for concern suggestion 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    Add as active or inactive concern?
  </div>
  <div
    className={undefined}
  >
    <select
      className=""
      name="concernType"
      onChange={[Function]}
      value="active"
    >
      <option
        disabled={true}
        hidden={true}
        value=""
      >
        Select a concern type
      </option>
      <option
        value="active"
      >
        Active concern
      </option>
      <option
        value="inactive"
      >
        Inactive concern
      </option>
    </select>
  </div>
  <div
    className={undefined}
  >
    <div
      className=""
      onClick={[Function]}
    >
      Cancel
    </div>
    <div
      className=""
      onClick={[Function]}
    >
      Add to Care Plan
    </div>
  </div>
</div>
`;

exports[`renders popup modal body for goal suggestion 1`] = `
<div
  className={undefined}
>
  <div
    className=""
  >
    Add this goal to a concern
  </div>
  <div
    className={undefined}
  >
    Select an existing patient concern, a suggested concern, or create a new one
  </div>
  <div
    className={undefined}
  >
    <select
      className=""
      name="concernId"
      onChange={[Function]}
      value="concern-id"
    >
      <option
        disabled={true}
        hidden={true}
        value=""
      >
        Select a concern
      </option>
      <optgroup
        label="New concern"
      >
        <option
          value="new-concern"
        >
          Add a new concern
        </option>
      </optgroup>
      <optgroup
        label="Suggested concerns"
      >
        <option
          value="concern-id"
        >
          Concern Title
        </option>
      </optgroup>
    </select>
  </div>
  <div
    className="undefined"
  >
    <input
      className=""
      name="newConcernTitle"
      onChange={[Function]}
      placeholder="Enter concern title"
      type="text"
      value=""
    />
  </div>
  <div
    className=""
  >
    <select
      className=""
      name="concernType"
      onChange={[Function]}
      value="active"
    >
      <option
        disabled={true}
        hidden={true}
        value=""
      >
        Select a concern type
      </option>
      <option
        value="active"
      >
        Active concern
      </option>
      <option
        value="inactive"
      >
        Inactive concern
      </option>
    </select>
  </div>
  <div
    className={undefined}
  >
    <div
      className=""
      onClick={[Function]}
    >
      Cancel
    </div>
    <div
      className=""
      onClick={[Function]}
    >
      Add to Care Plan
    </div>
  </div>
</div>
`;
